--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     let uriIndex = 0;
                     const loadImage = () => {
                         if (uriIndex >= gateways.length) {
-                            image.src = 'path_to_fallback_image.jpg'; 
+                            image.src = 'DSC03706.JPG'; 
                             return;
                         }
 
