--- a/index.html
+++ b/index.html
@@ -28,13 +28,29 @@
         .owner-address {
             font-weight: bold;
             margin-bottom: 20px;
-        }
+        } span { width: 60rem; height: auto; padding: 10px; }
     </style>
 </head>
 
 <body>
     <h1>Tezos NFT Collection</h1>
     <div id="nft-container"></div>
+
+    <div id=text>
+        <span> In fashion, we can speak about milestones that changed the history of the fashion industry. It can be the invention of sewing machines, the creation of fashion shows, or even the new possibilities that were created because of the internet. Now we can see a new milestone that is set by the digitalization of the fashion industry, the development of Web 3, and the crypto world.</span>
+                <span>As we know, the fashion industry is one of the biggest polluters, generating enormous amounts of issues. From the creation of textiles to the horrible conditions that are set for the workers. By having 52 collections each season, they create more than we can consume. </span>
+                <span>Is digitalization a new possibility to address many of the pressing issues?</span>
+                <span>Thanks to digitalization, fashion could become more inclusive, transparent, traceable, and ecological. (in some special aspects). </span>
+                <span> I have been interested in sustainable fashion since 2015. I have created a small upcycling brand that works only with second-hand or destroyed materials. The main pillars for the brand are not only being sustainable and alternative but also creating a community of like-minded people. So you can see why NFT´s and digital fashion would be important or at least interesting topics for me. </span>
+                <span>The possibilities that NFTs could offer for normal people who weren't that connected to the crypto and digital worlds are endless. How can tokens be used as a connection and create community around almost any project or idea? Also how we can clearly address the ownership, traceability, and clear information that lies within the blockchain. </span>
+                <span>The first brand I would like to mention is the artist/brand 9dcc. Not because I would like the fashion aspect of it, but the way they use the NFT. How they have created a community and rewarding system for all the users and supporters of the brand. All of the clothes that they produce are already sewn in an NFT chip (near-field communication). When the chip is scanned, you can mint your NFT. Then you can verify the ownership and get access to all the information from the blockchain.</span>
+                <span>So each physical product has a digital version in NFT. After buying the product, you became part of the ecosystem. And can use any advantages the system has to offer. By being active, buying more products, or helping in the ecosystem, you can gain more points. Also, they believe that the tokens can be used as skins or avatars in the digital or virtual universe. So not only are they addressing the need for bigger transparency in fashion, but they have also created a real platform for their community.</span>
+                        <span>Another creator I wanted to write about is digital platform DRAUP. Creator and CEO Dani Loftus have a mission of expanding the creative and technological bounds of digital fashion.</span>
+                <span>They use code-base systems that determine everything from cut and color to the pattern itself. They believe that code is also couture, and by using digital fashion, we are just taking the next logical step in the fashion industry. Their clothing is not only digital wearable garments but also a collectible.</span>
+                <span>Because most of the clothing we buy nowadays is intended for social media. So when buying it in digital form, we are skipping one important step in this industry, and that is the physical creation of the garment itself. By buying digital pieces, we can save a lot and make a strong impression. This marketplace aims to use the products throughout many online platforms, revolving around exclusivity and accessibility. When the project is completed, Draup will offer people the possibilities to buy, sell, showcase, and monetize their digital pieces.</span>
+                <span>These mentioned brands and many more are trying to fit and find the new possibilities. With growing opportunities that hope to find new ways we view and consume fashion. The main ideas I have already mentioned. This way fashion could be more inclusive and sustainable. Also, digital fashion could offer the needed transparency and traceability we are lacking in the actual fashion industry. And lastly, it could bring real value to the people that have been supporting these important ideas since the beginning. And by holding on to the NFT they either brought or got for supporting, by time the financial value would increase.</span>
+                        
+    </div>
 
     <script>
         async function fetchNFTs() {
